--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.18.0",
+    "axios": "^1.3.1",
+    "bootstrap": "^5.3.0-alpha1",
     "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "gh-pages": "^4.0.0",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
